# glm-cellphone

./: .env.example  .gitignore  README.md  pyproject.toml
src/glm_cellphone/: __init__.py  adb.py  api.py  artifacts.py  config.py  control.py  logs.py  mcp_server.py  outcome.py  runner.py  schemas.py  server.py  store.py
src/glm_cellphone/web/: app.js  index.html  styles.css
tests/: test_artifacts.py  test_config.py  test_logs.py  test_mcp_server.py  test_outcome.py
